# kaishi

./: Cargo.toml  README.md  netlify.toml
.superpowers/brainstorm/230053-1776455821/content/: index.html
.superpowers/brainstorm/230053-1776455821/state/: server-stopped
docs/: 2026-04-17-acp-integration-design.md  acp-reference.md  roadmap-0.6-0.7.md
docs/plans/: 2026-04-17-acp-integration.md  2026-04-17-kaishi-streaming-polish.md  2026-04-17-v021-polish.md  2026-04-17-v030-upstream.md  2026-04-18-portfolio-site.md  2026-04-18-tool-display-and-wrap-fixes.md  2026-04-18-v0.8.0-features.md  2026-04-19-subagent-zoom-view.md
docs/superpowers/specs/: 2026-04-17-kaishi-streaming-polish-design.md
site/: index.html
src/: acp.rs  app.rs  event.rs  main.rs  ui.rs  ui_file_popup.rs  ui_modal.rs  ui_palette.rs  ui_picker.rs  ui_subagent_zoom.rs
