[package]
name = "hermes-tui"
version = "0.4.0"
edition = "2021"
description = "Terminal UI for Hermes Agent"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime (process spawning, channels, IO)
tokio = { version = "1", features = ["full"] }

# StreamExt for crossterm EventStream
futures-lite = "2"

# Serialization (JSON-RPC framing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
