[package]
name = "kaishi"
version = "0.9.2"
edition = "2021"
authors = ["EvaL3n4"]
description = "懐紙 Kaishi — Terminal UI for Hermes Agent, speaking ACP over stdio"
license = "MIT"
repository = "https://github.com/eva-l3n4/kaishi"
homepage = "https://github.com/eva-l3n4/kaishi"
documentation = "https://github.com/eva-l3n4/kaishi#readme"
readme = "README.md"
keywords = ["tui", "ratatui", "agent", "acp", "hermes"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    "site/",
    "netlify.toml",
    ".superpowers/",
    "target/",
]

[[bin]]
name = "kaishi"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime (process spawning, channels, IO)
tokio = { version = "1", features = ["full"] }

# StreamExt for crossterm EventStream
futures-lite = "2"

# Serialization (JSON-RPC framing)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
walkdir = "2"
libc = "0.2"

# Syntax highlighting in code blocks
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# System clipboard (Wayland + X11)
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
